...
    translation: {
      // AUTH FLOW
      enter_your_name: 'Enter your name',
      enter_name: 'Enter name',
      // SPLASH SCREEN
      select_language: 'Select Language',
      english: 'English',
      arabic: 'Arabic',
      continue: 'Continue',
      view_result: 'view result',
      delete_aaccount: 'Delete Account',
      delete_aaccount_title:
        'Deleting your account will permanently erase all your data and settings',

      // OnboardingSCREEN1
...
      // OnboardingSCREEN2
      courses_available: 'Courses available',
      Onboarding_heading2:
        'Ask, Help, Earn: Our Interact & Reward Points Program',
      Onboarding_text2:
        'Interact and earn rewards with our points program! Help classmates and earn points redeemable for cash or future course purchases. Start building your rewards now.',
      skip: 'Skip',
      next: 'Next',
      reward_point: 'reward point',
      no_result_founds: 'No Result Founds',
      // SignUpScreen
      heading: 'Let’s you in',
      continue_with_google: 'Continue with Google',
      continue_with_mail: 'Continue with mail',
      continue_with_mobile: 'Continue with Mobile',
      email_verification: 'Enter your registered email',
      sms_verification: 'Enter your registered number',
      no_chat_found: 'No conversation found yet',

      // COMMON KEYS
...
      total_points: 'Total points',
      total_points_invitation: 'Total points',
      total_invited: 'Total invited',
      total_invited_invitation: 'Total invited',
      invited_users_rewards: 'Invited users rewards',
      got_10_point_and_youve_got_50_SAR: 'Got 10 point and you’ve got 50 SAR',
      guest: 'Guest',

      // PRIVACYSCREEN
      two_step_verification: '2 step verification',
      step_1: 'If we need to confirm it’s you, which should we try first?',
      phone_number: 'Phone Number',
      email_address: 'Email Address',
...
